@@ -1,1 +1,10 @@
 "# Skladiste" 
+
+add this to VM options
+
+--module-path
+"D:\javaJDKandSDKFX\javafx-sdk-11.0.2\lib"
+--add-modules
+javafx.controls,javafx.fxml
+--add-exports
+javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED“
